# Gravel

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build.ps1  imgui.ini
assets/: .gitkeep
assets/dhanis/: zuercher.mtl  zuercher_100kk.fbx
assets/man/: man.gltf  man.mtl
assets/man2/: man2.mtl
assets/saltbox/: saltbox_house.mtl
assets/screenshots/: Screencast from 2026-03-17 17-55-12.webm  Screencast from 2026-03-25 07-01-50.webm  Screencast from 2026-03-25 14-31-51.webm  Screencast from 2026-03-25 14-33-20.webm  Screencast from 2026-03-25 14-33-33.webm  bunny_curvature.webm  bunny_curvature_awareness.webm  bunny_proxy_shading.webm  scales_full_AA.webm
docs/: FEATURES.md  README.md  procedure.md  roadmap.md
docs/01/: README.md  epic-01-vulkan-infrastructure.md  feature-01-cmake-vulkan-setup.md  feature-02-glfw-window.md  feature-03-vulkan-instance.md  feature-04-device-selection.md  feature-05-swap-chain.md  feature-06-depth-buffer-render-pass.md  feature-07-command-buffers-sync.md  feature-08-render-loop.md  feature-09-descriptor-sets.md  feature-10-mesh-shader-pipeline.md  feature-11-imgui-integration.md
docs/02/: README.md  epic-02-mesh-loading.md  feature-01-obj-parser.md  feature-02-halfedge-conversion.md  feature-03-gpu-buffers.md  feature-04-shader-interface.md
docs/03/: README.md  epic-03-core-resurfacing.md  feature-02-mesh-shader-quad.md  feature-03-parametric-torus.md  feature-04-multiple-surfaces.md  feature-05-transform-pipeline.md  feature-06-uv-grid-generation.md  feature-07-fragment-shading.md
docs/04/: README.md  epic-04-amplification-lod.md  feature-01-amplification.md  feature-02-variable-resolution.md  feature-03-frustum-culling.md  feature-04-backface-culling.md  feature-05-lod-bounding-box.md  feature-06-lod-resolution.md
docs/05/: README.md  epic-05-bspline-cages.md  feature-01-control-cage-loader.md  feature-02-control-cage-upload.md  feature-03-bspline-basis.md  feature-04-bspline-surface.md  feature-05-bezier-surface.md  feature-06-integration.md
docs/06/: README.md  epic-06-pebble-generation.md  feature-01-pebble-pipeline.md  feature-02-pebble-task-shader.md  feature-03-control-cage-construction.md  feature-04-pebble-bspline.md  feature-05-procedural-noise.md  feature-06-lod-and-fragment.md
docs/07/: README.md  epic-07-control-maps.md  feature-01-control-map-loading.md  feature-02-control-map-sampling.md  feature-03-base-mesh-rendering.md  feature-04-ui-organization.md  feature-05-debug-modes.md  feature-06-skeletal-animation.md
docs/08/: README.md  epic-08-performance-analysis.md  feature-01-gpu-timing.md  feature-02-benchmarking-suite.md  feature-03-memory-analysis.md  feature-04-nsight-profiling.md  feature-05-comparison-pipelines.md  feature-06-performance-report.md
docs/09/: epic-09-chainmail-generation.md  feature-01-face-2-coloring.md  feature-02-chainmail-shader-orientation.md  feature-03-chainmail-ui-presets.md
docs/10/: epic-10-textures-skeleton-skinning.md  feature-01-image-loading-texture-infra.md  feature-02-expand-descriptor-set.md  feature-03-ao-and-element-type-map.md  feature-04-gltf-loader-skeleton.md  feature-05-gpu-skinning-animation.md
docs/11/: epic-11-mask-texture.md  feature-01-load-mask-texture.md  feature-02-task-shader-mask-sampling.md  feature-03-imgui-toggle.md
docs/12/: epic-12-third-person-controller.md  feature-01-player-controller.md  feature-02-orbit-camera.md  feature-03-wasd-movement.md  feature-04-animation-state.md  feature-05-imgui-controls.md
docs/13/: epic-13-pebble-generation.md  feature-01-pebble-ubo-pipeline.md  feature-02-pebble-helper-task-shader.md  feature-03-control-cage-construction.md  feature-04-bspline-evaluation-tessellation.md  feature-05-noise-implementation.md  feature-06-fragment-shader.md  feature-07-lod-system.md  feature-08-imgui-controls.md  feature-09-integration-polish.md
docs/14/: epic-14-pebble-pathway.md  feature-01-ground-plane-generation.md  feature-02-pathway-pebble-ubo.md  feature-03-pathway-task-shader.md  feature-04-ground-render-pass.md  feature-05-pathway-ui.md
docs/15/: epic-15-procedural-mesh-export.md  feature-01-obj-writer.md  feature-02-export-buffers.md  feature-03-compute-pipeline.md  feature-04-parametric-export.md  feature-05-pebble-export.md  feature-06-ui-integration.md
docs/16/: epic-16-pbr-lighting.md  feature-01-pbr-shader-library.md  feature-02-ubo-cpu-rename.md  feature-03-parametric-frag.md  feature-04-pebble-frag.md  feature-05-basemesh-shaders.md  feature-06-benchmark-frag.md
docs/17/: epic-17-dragon-scale.md  feature-01-bspline-shader-library.md  feature-02-shader-interface-extensions.md  feature-03-ssbo-descriptor-binding.md  feature-04-lut-loader.md  feature-05-cpp-struct-ui.md
docs/18/: epic-18-grwm-slot-placement.md  feature-01-push-constant-ui.md  feature-02-cpu-precull-expansion.md  feature-03-task-shader-slot-decode.md
docs/19/: epic-19-specular-aa.md
docs/20/: epic-20-msaa-coverage-fade.md  feature-01-msaa-pipeline.md  feature-02-alpha-to-coverage.md  feature-03-coverage-fade.md
docs/21/: epic-21-proxy-shading.md  feature-01-aggregate-precompute.md  feature-02-task-shader-proxy.md  feature-03-proxy-fragment-shading.md  feature-04-blend-zone.md
docs/22/: epic-22-catmull-clark-subdivision.md  feature-01-cpu-catmull-clark.md  feature-02-gpu-subdivision.md
docs/extra/: Gravel Report.md
include/: camera.h  renderer.h  renderer_init.h  renderer_mesh.h  vkHelper.h  window.h
include/camera/: CameraBase.h  FreeFlyCamera.h  OrbitCamera.h
include/core/: camera.h  window.h
include/geometry/: HalfEdge.h
include/input/: Gamepad.h  KeyboardMouse.h
include/level/: LevelPreset.h
include/loaders/: GltfLoader.h  ImageLoader.h  LUTLoader.h  ObjLoader.h  (+1 more)
libs/: .gitkeep
scripts/: gen_icosphere.py
shaders/: .gitkeep  common.glsl  culling.glsl  lods.glsl  shaderInterface.h  test.mesh  test_halfedge.mesh
src/: .gitkeep  HalfEdge.cpp  camera.cpp  main.cpp  renderer.cpp  renderer_imgui.cpp  renderer_init.cpp  renderer_mesh.cpp  vkHelper.cpp  window.cpp
web/: index.html
(+86 files in other folders)
